--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -38,7 +38,7 @@ svg,img { max-width: 100%; height: auto; }
 .ds-header.ds-fixed-header{ padding:20px 0;box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.25); }
 .ds-header-inner{ display: flex; justify-content: space-between; align-items: center; }
 .ds-logo{ text-transform: uppercase; font-size: 18px; letter-spacing: 3px; color: #1B1919; display: flex; align-items: center; }
-.ds-logo span{ display:flex; align-items: center; justify-content: center; width: 40px; height: 40px; background-color: #1B1919; border-radius: 4px; color: #FAF8F8; font-size: 22px; font-weight: 600; text-align: center; margin-right: 12px; }
+.ds-logo span{ display:flex; align-items: center; justify-content: center; width: 40px; height: 40px; background-color: #3B6D9D; border-radius: 4px; color: #FAF8F8; font-size: 22px; font-weight: 600; text-align: center; margin-right: 12px; }
 .ds-logo:hover{ color: #1B1919; }
 
 .ds-social{ list-style: none; display: flex; align-items: center; flex-wrap: wrap; }
@@ -71,7 +71,7 @@ svg,img { max-width: 100%; height: auto; }
   4. >>> Skills Style
 ----------------------------------------------------------------*/
 .ds-skills-section{ padding-bottom: 105px; }
-.ds-skills-list{ list-style: none; padding: 0; margin: 0; display: flex; flex-wrap: wrap; align-items: center; margin-top: 11px; }
+.ds-skills-list{font-size: 1.15rem; line-height: 2.2; margin: 1px 0 0; }
 .ds-skills-list li{ display: inline-block; color: #373737; font-size: 16px; padding:10px 20px; background-color: #FFF; border: 1px solid #D7D7D7;
   border-radius: 27px; margin-right: 15px; margin-bottom: 15px;  font-weight: 500;}
 
@@ -122,7 +122,7 @@ span.ds-department{ color: #373737; font-weight: 500; font-size: 18px; padding-b
 
 
 /*-----------------------------------------------------------------
-  7. >>> Spacet between buttons
+  8. >>> Spacet between buttons
 ----------------------------------------------------------------*/
 .space {
 	width: 20px;
